# tools

./: .env.example  .envrc  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  shell.nix
benchmark/: __init__.py  main.py
commit/: __init__.py  ai.py  cli.py  git.py  main.py  utils.py
grammar/: __init__.py  main.py
mock/: __init__.py  main.py
port/: __init__.py  main.py
report/: cli.py  main.py
report/ai/: summarizer.py
report/cli/: __init__.py  app.py  completion.py  formatters.py  handlers.py
report/cli/commands/: advanced.py  basic.py  config.py  stats.py
report/git/: commits.py
report/utils/: categorizer.py  config.py  dates.py  exporters.py  stats.py  tickets.py
review/: __init__.py  main.py
shared/: __init__.py  completion.py  dates.py
shared/ai/: __init__.py
shared/utils/: __init__.py  categorizer.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_categorizer.py  test_commits.py  test_dates.py  test_exporters.py  test_stats.py  test_summarizer.py  test_tickets.py
tools/: main.py
translate/: __init__.py  main.py
