[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit"
version = "0.3.0"
description = "A comprehensive toolkit of standalone CLI tools for developers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PerMees", email = "phucle.2971.dd@gmail.com"}
]
keywords = ["git", "cli", "report", "productivity", "toolkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer",
    "gitpython",
    "requests",
    "python-dotenv",
]

[project.scripts]
report = "report.main:main"
review = "review.main:main"
benchmark = "benchmark.main:main"
translate = "translate.main:main"
port = "port.main:main"
tools = "tools.main:main"
grammar = "grammar.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "report*",
    "review*",
    "benchmark*",
    "translate*",
    "port*",
    "grammar*",
    "shared*",
    "tools",
]
exclude = ["tests*", "*.tests*", "*.benchmarks*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=report",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
